name:                winot
version:             0.1.0.0
synopsis:            keep your laptop connected to wifi at all times on OpenBSD
description:         Please see README.md
homepage:            http://github.com/bonds/winot#readme
license:             ISC
license-file:        LICENSE
author:              Scott Bonds
maintainer:          scott@ggr.com
copyright:           2016 Scott Bonds
category:            Networking
build-type:          Custom
cabal-version:       >=1.10
tested-with:
  GHC == 7.10.3
Bug-Reports:         https://github.com/bonds/winot/issues

library
  exposed-modules:     Util.Log
                     , Util.Misc
                     , Util.Run
                     , Util.Orphan
                     , Status.Config
                     , Status.Interface
                     , Status.Process
                     , Status.Route
                     , Action.Connect
                     , Loop
                     , World
  other-modules:

  default-extensions:

  ghc-options:
    -Wall
    -Werror

  build-depends:       base             >= 4.6 && <4.10
                     , safe             >= 0.3 && <0.4
                     , async            >= 2.1 && <2.2
                     , deepseq          >= 1.3 && <= 1.5
                     , containers       >= 0.5 && <0.6
                     , semiring-simple  >= 1.0 && <1.1
                     , mtl              >= 2.1 && <2.3
                     , transformers     >= 0.4 && < 0.6
                     , text             >= 1.2 && <1.3
                     , string-conv      >= 0.1 && <0.2
                     , bytestring       >= 0.10 && <0.11
                     , hslogger
                     , unbounded-delays
                     , stm
                     , process
                     , clock
                     , htoml
                     , parsec
                     , unordered-containers
                     , string-conversions
                     , text-icu
                     , monad-loops
                     , extra
                     , threads
                     , unix
                     , liquidhaskell-cabal
                     , aeson
                     , aeson-pretty
                     , directory
                     , protolude
                     , trifecta
                     , monad-logger
                     , fast-logger
                     , unix-time
                     , template-haskell
                     , system-filepath
  hs-source-dirs:      src
  default-language:    Haskell2010

executable winot-exe
  default-extensions:

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Werror

  build-depends:       base             >= 4.6 && <4.10
                     , safe             >= 0.3 && <0.4
                     , async            >= 2.1 && <2.2
                     , deepseq          >= 1.3 && <= 1.5
                     , containers       >= 0.5 && <0.6
                     , semiring-simple  >= 1.0 && <1.1
                     , mtl              >= 2.1 && <2.3
                     , transformers     >= 0.4 && < 0.6
                     , text             >= 1.2 && <1.3
                     , string-conv      >= 0.1 && <0.2
                     , bytestring       >= 0.10 && <0.11
                     , winot
                     , liquidhaskell-cabal
                     , protolude
                     , monad-logger

  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite winot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , winot
                     , HUnit
                     , text
                     , QuickCheck
                     , liquidhaskell-cabal
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bonds/winot

flag liquidhaskell
  description: After building, verify with LiquidHaskell
  default:     False
